<resources>
    <string name="app_name">Dialer</string>
    <string name="about">ABOUT</string>
    <string name="call_list">CALL LIST</string>
    <string name="settings">SETTINGS</string>
    <string name="dial">DIAL</string>
    <string name="map">MAP</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="dial_activity">Dial activity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="numbersToDial">• Enter numbers to dial</string>
    <string name="previouslyDialed">• See previously dialed numbers</string>
    <string name="changeSettings">• Change the keypad settings</string>
    <string name="showOnMap">• Show on a Map where previous calls are dialed from</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCxjBmD708uHr9tNukvLf-F1ef2D7iFkl8</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="delete_numbers">Delete stored numbers</string>
    <string name="delete_numbers_summary">Delete stored telephone numbers from storage</string>

    <!-- Sync Preferences -->
    <string name="store_number">Store numbers</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="storing_numbers_text_on">Dialed telephone numbers are stored so they can be viewed later</string>
    <string name="storing_numbers_text_off">Dialed telephone numbers won\'t be stored</string>
    <string name="title_activity_maps">Map</string>
    <string name="call_list_activity"></string>
    <string name="numberText"></string>
    <string name="string_numbertext" />
    <string name="call"></string>
    <string name="del"></string>
    <string name="granted">Permission has been granted</string>
    <string name="denied">Permission has been denied</string>
    <string name="deleteStored">deleteStored</string>
    <string name="saveNumbers">saveNumbers</string>
    <string name="downloadText">DOWNLOAD VOICES</string>
    <string name="downloadMenu">DOWNLOAD VOICES</string>
    <string name="downloadingProgress">Downloading voices...</string>
    <string name="decompressing">Unzipping...</string>
    <string name="soundSummary">Settings sound summary</string>
    <string name="soundTitle">Voice</string>
    <string name="remind_me">Remind me to take a break</string>
    <string name="callListIfNull">No numbers exist</string>
    <string name="emptyList">No numbers are stored</string>




    <string-array name="default_pref">
        <item>EMPTY</item>
    </string-array>

    <string-array name="default_list">
        <item>EMPTY</item>
    </string-array>
</resources>