<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

        <SwitchPreferenceCompat
            app:key="saveNumber"
            app:title="@string/store_number"
            app:summaryOn="@string/storing_numbers_text_on"
            app:summaryOff="@string/storing_numbers_text_off"
            app:icon="@drawable/save_clip"
            app:defaultValue="true"
            />

    <Preference
        app:title="@string/delete_numbers"
        app:key="deleteStored"
        app:summary="@string/delete_numbers_summary"
        app:useSimpleSummaryProvider="true"
        app:icon="@drawable/delete_clip"
        />

    <ListPreference
        app:defaultValue="1"
        app:dialogTitle="@string/settings_sound_title"
        app:entries="@array/default_pref"
        app:entryValues="@array/default_list"
        app:key="voiceList"
        app:summary="@string/settings_sound_summary"
        app:title="@string/settings_sound_title" />

</PreferenceScreen>