<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/aboutbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:onClick="aboutButton"
        android:text="@string/about"
        app:layout_constraintTop_toBottomOf="@+id/mapbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mapbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="mapsButton"
        android:text="@string/map"
        app:layout_constraintTop_toBottomOf="@+id/settingsbutton"
        app:layout_constraintBottom_toTopOf="@+id/aboutbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/greetingsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/what_would_you_like_to_do"
        app:layout_constraintBottom_toTopOf="@+id/dialbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:onClick="dialButton"
        android:text="@string/dial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingsign"
        app:layout_constraintBottom_toTopOf="@+id/downloadbutton"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="291dp" />

    <Button
        android:id="@+id/calllistbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="calllistButton"
        android:text="@string/call_list"
        app:layout_constraintTop_toBottomOf="@+id/downloadbutton"
        app:layout_constraintBottom_toTopOf="@+id/settingsbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="settingsButton"
        android:text="@string/settings"
        app:layout_constraintTop_toBottomOf="@+id/calllistbutton"
        app:layout_constraintBottom_toTopOf="@+id/mapbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/downloadbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="downloadButton"
        android:text="@string/downloadText"
        app:layout_constraintBottom_toTopOf="@+id/calllistbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>